samples/_failures_safe/1761434507_24d4b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b95adfc2.c: In function ‘main’:
./samples/SAFE/__tmp_b95adfc2.c:166:9: error: expected expression at end of input
  166 |         if (scanf("%d %d %d", &from, &to, &
      |         ^~
./samples/SAFE/__tmp_b95adfc2.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b95adfc2.c:166:9: error: expected declaration or statement at end of input
